<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.vrinaldi.transhappy.MainActivity">

    <TableLayout
        android:id="@+id/fromToTbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <!-- FROM -->
        <TableRow
            android:id="@+id/fromRow">
            <TextView
                android:id="@+id/requestFrom"
                android:text="@id/from"
                android:textSize="18dp"
                />
            <AutoCompleteTextView
                android:id="@+id/fromStation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions|textAutoComplete"
                android:imeOptions="actionNext"
                android:selectAllOnFocus="true"
                android:completionThreshold="1" />
        </TableRow>
        <!-- TO -->
        <TableRow
            android:id="@+id/toRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@id/to"
                android:text="@id/to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                />
            <AutoCompleteTextView
                android:id="@+id/toStation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions|textAutoComplete"
                android:imeOptions="actionNext"
                android:selectAllOnFocus="true"
                android:completionThreshold="1" />
        </TableRow>
        <!-- Reverse Radio Button -->
        <TableRow
            android:id="@+id/reverseRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <Button
                android:id="@+id/btnReverse"
                android:text="@id/reverseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/rGrDepArr"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <RadioButton android:id="@+id/rbtnDeparture"
                    android:text="@id/departure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    />
                <RadioButton
                    android:id="@+id/rbtnArrival"
                    android:text="@id/arrival"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    />
            </RadioGroup>
        </TableRow>
    </TableLayout>
    <TableLayout
        android:id="@+id/dateTimeTbl"
        android:layout_below="@id/fromToTbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
        <!-- Date -->
        <TableRow android:id="@+id/dateRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <Button
                android:id="@+id/btnChangeDate"
                android:text="@id/changeDateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 />
        </TableRow>
        <TableRow>
            <DatePicker
                android:id="@+id/dpResult"
                android:layout_width="wrap_content"
                android:layout_height="95dp"
                />
        </TableRow>
        <!-- TIME -->
        <TableRow android:id="@+id/timeRow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <Button
                android:id="@+id/btnChangeTime"
                android:text="@id/changeTimeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 />
        </TableRow>
        <TableRow>
            <TimePicker
                android:id="@+id/tpResult"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                />
        </TableRow>
    </TableLayout>
    <!-- Search Button -->
    <Button
        android:id="@+id/searchButton"
        android:text="@id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dateTimeTbl"
        android:layout_span="2"
        />
</RelativeLayout>
